add jumbotron presentation

--- a/_config.yml
+++ b/_config.yml
@@ -12,6 +12,19 @@ slogan: L'innovation logistique et technologique au service de l'approvisionneme
 permalink: /:categories/:title.html
 description: > # this means to ignore newlines until "baseurl:"
   Xylolink construit une démarche d’accompagnement à la mise en oeuvre des innovations retenues, dépendant directement du niveau d’autonomie de l’entreprise. Afin que l’entreprise garde la maîtrise du processus d’innovation, Xylolink favorise la montée en compétence des acteurs par leur formation et leur implication directe à toutes les étapes.
+presentation: |
+  Xylolink apporte son expertise dans l'innovation logistique et technologique au service de l'approvisionnement en bois.
+
+  Nos actions :
+
+  * Analyse des faiblesses des réseaux logistiques par une démarche participative en entreprise,
+  * Recherche des solutions les plus adaptées par une démarche d'accompagnement à l'innovation impliquant directement les collaborateurs de l'entreprise
+  * Développement de solutions informatiques dédiées aux activités de la filière forêt-bois (gestion de stocks, cadencement des livraisons, analyse financière, reporting...)
+  * Réalisation d'études à l'échelle de la filière (schéma de desserte, diagnostic logistique...)
+
+  Xylolink est à la pointe de l'innovation de part son intégration à un large réseau académique en France et à l'international.
+
+  Nos références : KEDGE Business School, Ecole Supérieure du Bois, Laboratoire FORAC (Université Laval à Québec),...
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "http://xylolink.com" # the base hostname & protocol for your site
 twitter_username: xylolink
