new content and new home page

--- a/_config.yml
+++ b/_config.yml
@@ -24,7 +24,10 @@ presentation: |
 
   Xylolink est à la pointe de l'innovation de part son intégration à un large réseau académique en France et à l'international.
 
-  Nos références : KEDGE Business School, Ecole Supérieure du Bois, Laboratoire FORAC (Université Laval à Québec),...
+  Nos références : KEDGE Business School, Ecole Supérieure du Bois, ENSTIB, INRA Nancy, Laboratoire FORAC (Université Laval à Québec), Université de Bordeaux.
+
+  Nos clients et partenaires : Les entreprises de l'approvisionnement en bois rond, les institutionnels (ORT du Grand Est, Communautés de communes MACS et Grand DAX),
+   nos confrères (Forêt Logistique conseil, Cabinet Coudert)
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "http://xylolink.com" # the base hostname & protocol for your site
 twitter_username: xylolink
