css & _config minor modifications

--- a/_config.yml
+++ b/_config.yml
@@ -11,7 +11,8 @@ email: webmaster@xylolink.com
 slogan: L'innovation logistique et technologique au service de l'approvisionnement en bois
 permalink: /:categories/:title.html
 description: > # this means to ignore newlines until "baseurl:"
-  Xylolink construit une démarche d’accompagnement à la mise en oeuvre des innovations retenues, dépendant directement du niveau d’autonomie de l’entreprise. Afin que l’entreprise garde la maîtrise du processus d’innovation, Xylolink favorise la montée en compétence des acteurs par leur formation et leur implication directe à toutes les étapes.
+  Les actions de Xylolink sont principalement menées par [Adrien Arraiolos](https://www.linkedin.com/in/adrienarraiolos),
+  ingénieur agronome diplômé de l'Ecole nationale Supérieure d'Agronomie de Montpellier, spécialisé dans l'innovation technologique [AgroTIC](http://www.agrotic.org/blog/).
 presentation: |
   Xylolink apporte son expertise dans l'innovation logistique et technologique au service de l'approvisionnement en bois.
 
@@ -21,6 +22,8 @@ presentation: |
   * Recherche des solutions les plus adaptées par une démarche d'accompagnement à l'innovation impliquant directement les collaborateurs de l'entreprise
   * Développement de solutions informatiques dédiées aux activités de la filière forêt-bois (gestion de stocks, cadencement des livraisons, analyse financière, reporting...)
   * Réalisation d'études à l'échelle de la filière (schéma de desserte, diagnostic logistique...)
+
+  Xylolink construit une démarche d’accompagnement à la mise en oeuvre des innovations retenues, dépendant directement du niveau d’autonomie de l’entreprise. Afin que l’entreprise garde la maîtrise du processus d’innovation, Xylolink favorise la montée en compétence des acteurs par leur formation et leur implication directe à toutes les étapes.
 
   Xylolink est à la pointe de l'innovation de part son intégration à un large réseau académique en France et à l'international.
 
