--- a/_config.yml
+++ b/_config.yml
@@ -32,7 +32,7 @@ presentation: |
   Nos clients et partenaires : Les entreprises de l'approvisionnement en bois rond, les institutionnels (ORT du Grand Est, Communautés de communes MACS et Grand DAX),
    nos confrères (Forêt Logistique conseil, Cabinet Coudert)
 baseurl: "" # the subpath of your site, e.g. /blog
-url: "http://xylolink.com" # the base hostname & protocol for your site
+url: "http://www.xylolink.com" # the base hostname & protocol for your site
 twitter_username: xylolink
 github_username:  xylolink
 
