--- a/_config.yml
+++ b/_config.yml
@@ -6,7 +6,7 @@
 # 'jekyll serve'. If you change this file, please restart the server process.
 
 # Site settings
-title: Xylolink
+title: Xylolink - optimisation de l'approvisionnement en bois
 email: webmaster@xylolink.com
 slogan1: L'innovation logistique et technologique 
 slogan2: Au service de l'approvisionnement en bois
